--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,19 +40,30 @@ android {
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.fireappbuilder.android.calypso"
+        applicationId "com.iipccanada.tv"
         minSdk 21
         //noinspection ExpiredTargetSdkVersion
         targetSdk 33
-        versionCode 10
-        versionName "1.0.7"
+        versionCode 12
+        versionName "1.0.9"
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
         multiDexEnabled true
     }
+
+    signingConfigs {
+        release {
+            storeFile file("./iipctvhd.jks")
+            storePassword "IIPCTVHD"
+            keyAlias "IIPCTVHD"
+            keyPassword "IIPCTVHD"
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
         debug {
             testCoverageEnabled = true
